fix alignment

--- a/src/styles/components/homepage.scss
+++ b/src/styles/components/homepage.scss
@@ -416,11 +416,7 @@ $padding-project-description: 1rem;
         @include responsive(75rem) {
           flex-direction: column;
           align-items: stretch;
-          justify-content: flex-start !important;
-          justify-items: flex-start !important;
-          align-items: flex-start !important;
-          text-align: left !important;
-          align-content: flex-start !important;
+          align-items: flex-start;
           .project-image {
             display: none;
           }
@@ -429,11 +425,7 @@ $padding-project-description: 1rem;
             position: relative;
             padding: $page_padding-vertical $page_padding-horizontal;
             background: $color-accent-2;
-            justify-content: flex-start !important;
-            justify-items: flex-start !important;
-            align-items: flex-start !important;
-            text-align: left !important;
-            align-content: flex-start !important;
+            justify-items: flex-start;
             > * {
               position: relative;
               z-index: 2;
